app-policy/config/demo/10-yaobank.yaml
# Copyright (c) 2017 Tigera, Inc. All rights reserved.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: database
spec:
  ports:
    - port: 2379
      name: http
  selector:
    app: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: database
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: database
        version: v1
    spec:
      serviceAccountName: database
      containers:
        - name: database
          image: spikecurtis/yaobank-database:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2379
          command: ["etcd"]
          args:
            - "-advertise-client-urls"
            - "http://database:2379"
            - "-listen-client-urls"
            - "http://0.0.0.0:2379"
---
apiVersion: v1
kind: Service
metadata:
  name: summary
  labels:
    app: summary
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: summary
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summary
spec:
  selector:
    matchLabels:
      app: summary
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: summary
        version: v1
    spec:
      serviceAccountName: summary
      containers:
        - name: summary
          image: spikecurtis/yaobank-summary:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    app: customer
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: customer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
spec:
  selector:
    matchLabels:
      app: customer
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: customer
        version: v1
    spec:
      serviceAccountName: customer
      containers:
        - name: customer
          image: spikecurtis/yaobank-customer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: yaobank
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: yaobank
spec:
  hosts:
    - "*"
  gateways:
    - yaobank
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: customer
            port:
              number: 80
